hello-world-gr-k8s.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world-gr
  labels:
    run: rest-hello-world-gr
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: rest-hello-world-gr
    spec:
      containers:
      - image: hello-world-gr:latest
        imagePullPolicy: Never
        name: rest-hello-world-gr
        ports:
        - containerPort: 8080
          protocol: TCP
#        livenessProbe:
#          httpGet:
#            port: 8080
#            path: /
#          exec:
#            command:
#        readinessProbe:
#          httpGet:
#            port: 8080
#            path: /actuator/health
      imagePullSecrets:
      - name: wrelease
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rest-hello-world-gr-svc
spec:
  selector:
    run: rest-hello-world-gr
  ports:
  - port: 8088
    targetPort: 8080
  type: LoadBalancer
---

#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: rest-hello-world-gr-ing
#  annotations:
#    kubernetes.io/ingress.class: 'nginx'
#    ingress.kubernetes.io/add-base-url: 'true'
#    ingress.kubernetes.io/rewrite-target: /
#spec:
#  tls:
#  - secretName: tls-secret
#  rules:
#  - http:
#      paths:
#      - path: /
#        backend:
#          serviceName: rest-hello-world-gr-svc
#          servicePort: 8088
